@@ -1,3 +1,5 @@
+import sun.jvmstat.monitor.MonitoredVmUtil.jvmArgs
+
 plugins {
     java
 }
@@ -36,8 +38,15 @@ subprojects {
         }
     }
 
-    tasks.withType<Test> {
-        this.useJUnitPlatform()
+    tasks {
+        withType<Test>().all {
+            jvmArgs("--enable-preview", "--add-modules", "jdk.incubator.vector")
+            useJUnitPlatform()
+        }
+
+        withType<JavaExec>().configureEach {
+            jvmArgs("--enable-preview", "--add-modules", "jdk.incubator.vector")
+        }
     }
 }
 
